# wavelet2vec

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: API.md  DESIGN.md  EXPERIMENTS_PLAN.md  WORKFLOW.md
experiments/: EXPERIMENTS.md  __init__.py  dataset.py  invertible.py  make_docs_figures.py  mel_baseline.py  metrics.py  run_experiments.py  viz.py
src/wavelet2vec/: __init__.py  adsr.py  audio_io.py  character.py  cli.py  conv_encoder.py  embedder.py  filterbank.py  harmonic_features.py  perform.py  phase_features.py  sequence.py  slicing.py  stereo_features.py  style_transfer.py  transient_features.py  wavelet_features.py
tests/: test_embedder.py  test_experiments.py  test_invertible.py  test_musical_control.py  test_perform.py
